# IC-Marcus

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  AI_MEMORY.md  ARCHITECTURE.md  CI_CD_GUIDE.md  CLAUDE.md  CODE_MAP.md  Dockerfile  Dockerfile.collector  EXPERIMENTS.md  IC.md  IMPLEMENTATION_SUMMARY.md  LABELING_STRATEGY.md  Makefile  PRD LSTM.md  PRD Otimização Bayesiana.md  PRD XGBoost.md  PROGRESS_REPORT.md  README.md  activate_venv.ps1  activate_venv.sh  check_venv.ps1  compare_models.py  disable_extensions.ps1  docker-compose.yml  environment.yml  execute_full_optimization.py  feature_importance.csv  install_batch.ps1  list_extensions.ps1  lstm_optimal_study.db  project.ps1  pyproject.toml  pytest.ini  quick_venv.ps1  requirements.in  (+11 more)
.claude/: settings.json
.claude/agents/: crypto-feature-engineer.md  crypto-trading-strategist.md  ic-pipeline-master.md  lstm-crypto-expert.md  meta-orchestrator-agent.md  research-analysis-expert.md  xgboost-crypto-expert.md
.devcontainer/: .env.example  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  coverage.yml  dependency-lock.yml  lint.yml  ml_tests.yml  mlops.yml  model_validation.yml  publish.yml  security.yml  statistical_validation.yml
.hypothesis/constants/: 2de3a5646af5ecb4  7a697a2218cd7e4d  8e56fd7fae7becd2  99d2c12333e3a5d2  bcfb520b642f044e  c0df0089beaf7eb8  c4f6603479ae31f7  d45eac64e3427675  d8301d7960faf242  e70db5a447a43f52  ef2ca202af5960ba
automation/: run.bat
configs/: backtest.yaml  cache.json  data.yaml  features.yaml  lstm.yaml  lstm_optimized.yaml  market.yaml  monitoring.yaml  multi_horizon.yaml  optuna.yaml  validation.yaml  xgb.yaml  xgb_optimized.yaml
deployment/: Dockerfile  docker-compose.yml
docs/architecture/: AGENTS.md  ARCHITECTURE.md
docs/project/: PRD.md
notebooks/: IC_Crypto_Complete.ipynb  IC_Crypto_Complete.py
requirements/: core.txt
scripts/: check_performance_gates.py  compare_models.py  deploy_model.py  detect_secrets.py  monitor_training.py  security_audit.py  setup_dvc.sh  test_model_registry.py  validate_performance.py
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_features.py  test_lstm_comprehensive.py  test_lstm_health_check.py  test_lstm_integration.py  test_xgb_health_check.py  test_xgb_optuna_comprehensive.py  test_xgb_quick_issues.py  test_xgboost.py
(+229 files in other folders)
